--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,38 @@
 
 .first_name,  .last_name ,.email, .gender, .age, .tenth_score, .twelth_score,.preferred_branch{
   border: 1px solid black;
+  height: 30px;
+  margin-top: 10px;
+  
+  /* padding: 10px; */
+  font-size: 20px;
+  
+}
+
+.togglebtn {
+  background-color: black;
+  color: aliceblue;
+  height: 50px;
+  width: 30%;
+  border: none;
+  font-size: 30px;
+  border-radius: 15px;
+}
+.addstudent{
+  margin: auto;
+  margin-top: 10px;
+  border: 2px solid blueviolet;
+  width: 50%;
+}
+
+.submit{
+  background-color: black;
+  color: aliceblue;
+  height: 50px;
+  width: 100%;
+  border: none;
+  font-size: 30px;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 15px;
 }
